# static-iref

./: Cargo.toml  README.md
src/: lib.rs
tests/: main.rs
